# NCTU_Courses

2018_1_Data_Science/: README.md
2018_1_Data_Science/hw1/: 0750727.py  README.md
2018_1_Data_Science/hw2/: fpgrowth.cc  fpgrowth_test.cc  main.cc  makefile
2018_1_Data_Science/hw3/: hw3.ipynb  hw3.py
2018_1_Data_Science/hw4/: hw4.ipynb  hw4.py  hw4_.py  test.py
2018_1_Data_Science/hw5/: README.md  hw5.py  hw5_2.py  hw5_3.py  hw5_4.py  hw5_final.py
2018_1_Parallel_Programming/1_pthread/: README.md  hw1.sh  pi.c  pth_attr.c  pth_create.c  pth_hello.c  pth_matrix.c  pth_pi.c  pth_semaphore.c
2018_1_Parallel_Programming/2_openmp/: README.md  omp_hello.c  omp_pi.c  omp_pi_pad.c  omp_pi_reduction.c  omp_pi_sync.c  omp_pi_variable.c
2018_1_Parallel_Programming/3_mpi/: README.md  mpi1_hello.c  mpi2_communicator.c  mpi3_sendrecv.c
2018_1_Parallel_Programming/4_cuda/: README.md  cuda1_matmul.cu  cuda2_matmul_blocks.cu  cuda3_matmul_shared.cu
2018_1_Parallel_Programming/5_opencl/: README.md  cl1_image_rotation.cl
2018_1_Robotics/homework/: hw3.tex  hw4.tex
2018_1_Robotics/project1/: CMakeLists.txt  README.md  mainwindow.cc  mainwindow.h  mainwindow.ui  project1.hpp  project1_main_cli.cc  project1_main_gui.cc
2018_1_Robotics/project1/report/: report.tex
2018_1_Robotics/project2/: project2.py
2018_2_Operating_System_Design_and_Implementation/: Makefile
2018_2_Operating_System_Design_and_Implementation/boot/: boot.S
2018_2_Operating_System_Design_and_Implementation/inc/: stdio.h  syscall.h
2019_1_Convex_Optimization/: README.md  defs.tex
(+113 files in other folders)
